--- a/code/Python_module_11.ipynb
+++ b/code/Python_module_11.ipynb
@@ -16,13 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:/Users/Yarik/OneDrive/Рабочий стол/python_modules/Python_module_11'"
+       "'c:/Users/Yaroslav/Desktop/Python_repos/Python_module_11'"
       ]
      },
      "metadata": {},
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 403,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 404,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 405,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -745,19 +745,10 @@
     {
      "data": {
       "text/plain": [
-       "56"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
        "50"
       ]
      },
-     "execution_count": 406,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,10 +759,9 @@
     "\n",
     "def get_street_type(address):\n",
     "    exclude_lst = ['N', 'S', 'E', 'W']\n",
-    "    \n",
     "    address_lst = address.split(' ')\n",
+    "    \n",
     "    if address_lst[-1] in exclude_lst:\n",
-    "        \n",
     "        return address_lst[-2]\n",
     "    else:\n",
     "        return address_lst[-1]\n",
@@ -779,18 +769,12 @@
     "melb_df['Address'] = melb_df['Address'].apply(get_street_type)\n",
     "\n",
     "\n",
-    "display(melb_df['Address'].nunique())\n",
-    "\n",
-    "\n",
     "def change_adress(string):\n",
-    "    \n",
-    "    alt_dict = {\n",
-    "                'Av_alt' : ['Avenue', 'Ave'],\n",
+    "    alt_dict = {'Av_alt' : ['Avenue', 'Ave'],\n",
     "                'Cr_alt' : ['Crescent'],\n",
     "                'Bvd_alt' : ['Boulevard'],\n",
     "                'Hwy_alt' : ['Highway'], \n",
-    "                'Pde_alt' : ['Parade']\n",
-    "               }\n",
+    "                'Pde_alt' : ['Parade'] }\n",
     "    \n",
     "    for i in alt_dict:               \n",
     "        if string in alt_dict[i]:\n",
@@ -810,13 +794,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Index(['St', 'Rd', 'Ct', 'Dr', 'Av', 'Gr', 'Pde', 'Pl', 'Cr', 'Cl'], dtype='object', name='Address')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "11"
       ]
      },
      "metadata": {},
@@ -840,7 +833,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 407,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,7 +843,7 @@
     "display(popular_stypes)\n",
     "\n",
     "melb_df['Address'] = melb_df['Address'].apply(lambda x: x if x in popular_stypes else 'other')\n",
-    "melb_df['Address'].nunique()\n",
+    "display(melb_df['Address'].nunique())\n",
     "melb_df['Address'].value_counts()"
    ]
   },
@@ -863,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +974,7 @@
        "np.float64(84.93080566562001)"
       ]
      },
-     "execution_count": 409,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1002,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1236,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1281,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1283,7 @@
        "np.float64(1081198.6406956792)"
       ]
      },
-     "execution_count": 412,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1305,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1323,7 +1316,7 @@
        "np.float64(1.297709923664122)"
       ]
      },
-     "execution_count": 413,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1350,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1446,7 +1439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
